# endstone-mobstacker

./: pyproject.toml
src/endstone_mobstacker/: __init__.py  config.toml  menuui.py  mobstacker.py
